(Fix) Increase font weight for better readability

--- a/client/src/assets/styles/fonts.scss
+++ b/client/src/assets/styles/fonts.scss
@@ -1,2 +1,2 @@
 /* @import url(https://fonts.googleapis.com/css?family=Raleway:300); */
-@include font-face(Raleway, '../fonts/Raleway/raleway', 300, normal);
+@include font-face(Raleway, '../fonts/Raleway/raleway-regular-webfont', 300, normal);
